--- a/src/index.css
+++ b/src/index.css
@@ -16,21 +16,10 @@ code {
     monospace;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-ul,
-ol,
-p {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 img {
